--- a/static/css/settings.css
+++ b/static/css/settings.css
@@ -1,4 +1,3 @@
-/* error.css e settings.css são basicamente iguais */
 .container {
     max-width: 1400px;
     margin: 0 auto;
@@ -9,7 +8,7 @@
 }
 
 .container > * {
-    flex: 1 0 380px; /* Define a fixed size for each card */
+    flex: 1 0 380px; 
     max-width: 1400px;
 }
 
